# gmail_web_client_cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
handlers/: gmail.cpp  gmail.h  ping.cpp  ping.h
models/: gmail_client.cpp  gmail_client.h
views/: gmail.csp  login.csp  message.csp
